--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 
   <ul>
     <li>
-      <a href="git.html">Git課題</a>
+      <a href="6-8.html">Git課題</a>
     </li>
   </ul>
-
-  <p>
-    <a href="../index.html">トップページに戻る</a>
-  </p>
 
 </body>
 </html>
